# plane-lazy-bird-integration

./: .env.example  .gitignore  CLAUDE.md  DEEP_INTEGRATION_PLAN.md  DEV_WORKFLOW.md  IMPLEMENTATION.md  README.md  pyproject.toml
docker/: Dockerfile.lazy-bird-mock  Dockerfile.plane-api  Dockerfile.test-runner  docker-compose.test.yml  entrypoint-plane-api.sh  lazy_bird_mock.py  plane_settings_patch.py  setup-test-env.sh
plane_lazy_bird/: __init__.py  admin.py  api.py  apps.py  client.py  models.py  permissions.py  serializers.py  signals.py  urls.py  webhooks.py
plane_lazy_bird/management/commands/: lazy_bird_setup_webhook.py
plane_lazy_bird/migrations/: 0001_initial.py  0002_automationconfig_api_key_automationconfig_api_url.py
tests/: settings.py  test_api.py  test_client.py  test_models.py  test_signals.py  test_webhooks.py  urls.py
tests/integration/: conftest.py  test_api_auth.py  test_signal_flow.py  test_webhook_flow.py
